# ChangeLog for app-arch/extract
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Mar 2011; Justin Lecher <jlec@gentoo.org> extract-1.0.ebuild:
  Fixed up ebuild
